force-app/main/default/objects/Opportunity/fields/Aberta__c.field-meta.xml
<CustomField>
    <fullName>Aberta__c</fullName>
    <formula>IF(
AND(
TEXT(StageName) != &apos;WIN&apos;,
TEXT(StageName) == &apos;LOSS&apos;
),  1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aberta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>