force-app/main/default/objects/Opportunity/fields/Alerta_para_negocio_futuro__c.field-meta.xml
<CustomField>
    <fullName>Alerta_para_negocio_futuro__c</fullName>
    <label>Alerta para negócio futuro</label>
    <type>Date</type>
</CustomField>