force-app/main/default/objects/Opportunity/fields/ATA_SRP__c.field-meta.xml
<CustomField>
    <fullName>ATA_SRP__c</fullName>
    <label>ATA SRP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>