force-app/main/default/objects/Opportunity/fields/Canal_de_venda__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_venda__c</fullName>
    <label>Canal de venda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Convênio</fullName>
            </value>
            <value>
                <fullName>Particular</fullName>
            </value>
            <value>
                <fullName>Público</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>