force-app/main/default/objects/Opportunity/fields/Comited__c.field-meta.xml
<CustomField>
    <fullName>Comited__c</fullName>
    <formula>IF(
TEXT(StageName) == &apos;COMITED&apos;,
Amount , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>