force-app/main/default/objects/Opportunity/fields/Confirmado__c.field-meta.xml
<CustomField>
    <fullName>Confirmado__c</fullName>
    <label>Confirmado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não</fullName>
                <default>true</default>
                <label>Não</label>
            </value>
            <value>
                <fullName>Sim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>