force-app/main/default/objects/Opportunity/fields/Contagem_demonstracoes__c.field-meta.xml
<CustomField>
    <fullName>Contagem_demonstracoes__c</fullName>
    <label>Contagem demonstrações</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>