force-app/main/default/objects/Opportunity/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <label>Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>