force-app/main/default/objects/Opportunity/fields/Contrato_de_Servico__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Servico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato de serviço (excluir)</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>