force-app/main/default/objects/Opportunity/fields/Controle_do_Vencimento__c.field-meta.xml
<CustomField>
    <fullName>Controle_do_Vencimento__c</fullName>
    <formula>IF(CloseDate &lt; TODAY(),&quot;Prazo Excedido&quot;,&quot;No Prazo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Controle do Vencimento</label>
    <type>Text</type>
</CustomField>