force-app/main/default/objects/Opportunity/fields/Data_da_Abertura__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Abertura__c</fullName>
    <label>Data da abertura</label>
    <type>DateTime</type>
</CustomField>