force-app/main/default/objects/Opportunity/fields/Data_de_Altera_o_do_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Altera_o_do_Status__c</fullName>
    <label>Data de Alteração do Status</label>
    <type>Date</type>
</CustomField>