force-app/main/default/objects/Opportunity/fields/Data_de_alteracao_da_Subfase__c.field-meta.xml
<CustomField>
    <fullName>Data_de_alteracao_da_Subfase__c</fullName>
    <label>Data de alteração da Subfase</label>
    <type>DateTime</type>
</CustomField>