force-app/main/default/objects/Opportunity/fields/Data_de_cria_o__c.field-meta.xml
<CustomField>
    <fullName>Data_de_cria_o__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de criação</label>
    <type>Date</type>
</CustomField>