force-app/main/default/objects/Opportunity/fields/Data_de_Reabertura__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Reabertura__c</fullName>
    <label>Data de Reabertura</label>
    <type>Date</type>
</CustomField>