force-app/main/default/objects/Opportunity/fields/Data_do_Fim_da_ATA__c.field-meta.xml
<CustomField>
    <fullName>Data_do_Fim_da_ATA__c</fullName>
    <label>Data do fim da ATA</label>
    <type>Date</type>
</CustomField>