force-app/main/default/objects/Opportunity/fields/Data_e_hora_do_procedimento__c.field-meta.xml
<CustomField>
    <fullName>Data_e_hora_do_procedimento__c</fullName>
    <label>Data e hora do procedimento</label>
    <type>DateTime</type>
</CustomField>