force-app/main/default/objects/Opportunity/fields/data_limite_esclarescimento__c.field-meta.xml
<CustomField>
    <fullName>data_limite_esclarescimento__c</fullName>
    <label>Data limite para esclarescimento</label>
    <type>DateTime</type>
</CustomField>