force-app/main/default/objects/Opportunity/fields/Data_limite_para_impugnacao__c.field-meta.xml
<CustomField>
    <fullName>Data_limite_para_impugnacao__c</fullName>
    <label>Data limite para impugnação</label>
    <type>DateTime</type>
</CustomField>