force-app/main/default/objects/Opportunity/fields/Declara_es__c.field-meta.xml
<CustomField>
    <fullName>Declara_es__c</fullName>
    <label>Declarações</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>