force-app/main/default/objects/Opportunity/fields/Departamento_do_Proporiet_rio__c.field-meta.xml
<CustomField>
    <fullName>Departamento_do_Proporiet_rio__c</fullName>
    <formula>Owner.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departamento do Proporietário</label>
    <type>Text</type>
</CustomField>