force-app/main/default/objects/Opportunity/fields/Dias_de_Altera_o_do_Status__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_Altera_o_do_Status__c</fullName>
    <formula>TODAY() - Data_de_Altera_o_do_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias de Alteração do Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>