force-app/main/default/objects/Opportunity/fields/Documentacao_de_credenciamento__c.field-meta.xml
<CustomField>
    <fullName>Documentacao_de_credenciamento__c</fullName>
    <label>Documentação de credenciamento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contrato Social</fullName>
            </value>
            <value>
                <fullName>Documento dos sócios</fullName>
            </value>
            <value>
                <fullName>Documentos Procurador</fullName>
            </value>
            <value>
                <fullName>Declaração de Habilitação</fullName>
            </value>
            <value>
                <fullName>Termo de Credenciamento</fullName>
            </value>
            <value>
                <fullName>Procuração Especifica</fullName>
            </value>
            <value>
                <fullName>Declaração ME/EPP</fullName>
            </value>
            <value>
                <fullName>Certidão Simplificada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>