force-app/main/default/objects/Opportunity/fields/Documentacao_de_habilitacao__c.field-meta.xml
<CustomField>
    <fullName>Documentacao_de_habilitacao__c</fullName>
    <label>Documentação de habilitação</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contrato Social</fullName>
            </value>
            <value>
                <fullName>Documentos Todos os Socios</fullName>
            </value>
            <value>
                <fullName>Documentos do Sócio Administrador</fullName>
            </value>
            <value>
                <fullName>CNPJ</fullName>
            </value>
            <value>
                <fullName>Inscrição Municipal</fullName>
            </value>
            <value>
                <fullName>Inscrição Estadual</fullName>
            </value>
            <value>
                <fullName>Certidão Municipal</fullName>
            </value>
            <value>
                <fullName>Certidão Estadual</fullName>
            </value>
            <value>
                <fullName>Certidão Federal</fullName>
            </value>
            <value>
                <fullName>FGTS</fullName>
            </value>
            <value>
                <fullName>CNDT</fullName>
            </value>
            <value>
                <fullName>Falência e Concordata</fullName>
            </value>
            <value>
                <fullName>Balanço Patrimonial</fullName>
            </value>
            <value>
                <fullName>Alvará de Localização e Funcionamento</fullName>
            </value>
            <value>
                <fullName>Declaração de Menor</fullName>
            </value>
            <value>
                <fullName>Vigilância Sanitária Municipal</fullName>
            </value>
            <value>
                <fullName>Vigilância Sanitária Estadual</fullName>
            </value>
            <value>
                <fullName>AFE</fullName>
            </value>
            <value>
                <fullName>BPFD</fullName>
            </value>
            <value>
                <fullName>Atestado de Capacidade técnica</fullName>
            </value>
            <value>
                <fullName>Acervo Técnico</fullName>
            </value>
            <value>
                <fullName>Declaração de Fatos Impeditivos</fullName>
            </value>
            <value>
                <fullName>Sicaf</fullName>
            </value>
            <value>
                <fullName>Cadfor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>