force-app/main/default/objects/Opportunity/fields/Documentacao_de_proposta__c.field-meta.xml
<CustomField>
    <fullName>Documentacao_de_proposta__c</fullName>
    <label>Documentação de proposta</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registro Anvisa</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>BPF</fullName>
            </value>
            <value>
                <fullName>Catalogo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>