force-app/main/default/objects/Opportunity/fields/Exclusivo_ME_EPP__c.field-meta.xml
<CustomField>
    <fullName>Exclusivo_ME_EPP__c</fullName>
    <label>Exclusivo ME/EPP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
            <value>
                <fullName>PARCIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>