force-app/main/default/objects/Opportunity/fields/Fase_antes_do_loss__c.field-meta.xml
<CustomField>
    <fullName>Fase_antes_do_loss__c</fullName>
    <label>Fase antes do loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>