force-app/main/default/objects/Opportunity/fields/Faturado__c.field-meta.xml
<CustomField>
    <fullName>Faturado__c</fullName>
    <formula>Total_Faturado__c /  Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Faturado (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>