force-app/main/default/objects/Opportunity/fields/Faturamento_Feito2__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_Feito2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Faturamento feito</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>FORNECEDOR, DISTRIBUIDOR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Faturamentos Feitos (de oportunidades)</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>