force-app/main/default/objects/Opportunity/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <formula>IF(Propriedade_da_conta__c == &apos;PRIVADO&apos; || Propriedade_da_conta__c == &apos;&apos;,
IF(TEXT(StageName) = &apos;COMITED&apos;, Amount,
IF(TEXT(StageName) = &apos;WIN&apos;, 0,
IF(TEXT(StageName) = &apos;UPSIDE HIGH&apos;, Amount * 0.35,
IF(TEXT(StageName) = &apos;UPSIDE&apos;, Amount * 0.2,
IF(TEXT(StageName) = &apos;OPEN&apos;, Amount * 0.1, Amount* 0))))),

IF(Propriedade_da_conta__c == &apos;PUBLICO&apos; || Propriedade_da_conta__c == &apos;FILANTROPIA&apos;,
IF(TEXT(StageName) = &apos;WIN&apos;, 0,
IF(TEXT(StageName) = &apos;COMITED&apos; &amp;&amp; TEXT(Sub_Fase__c) != &apos;GARANTIDO&apos;, Amount * 0.4,
IF(TEXT(StageName) = &apos;COMITED&apos; &amp;&amp; TEXT(Sub_Fase__c) = &apos;GARANTIDO&apos;, Amount ,
IF(TEXT(StageName) = &apos;UPSIDE HIGH&apos;, Amount * 0.2,
IF(TEXT(StageName) = &apos;UPSIDE&apos;, Amount * 0.1,
IF(TEXT(StageName) = &apos;OPEN&apos;, Amount * 0, Amount * 0)))))), null)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>