force-app/main/default/objects/Opportunity/fields/Funil_privado__c.field-meta.xml
<CustomField>
    <fullName>Funil_privado__c</fullName>
    <formula>IF(
AND(
TEXT(StageName) != &apos;LOSS&apos;,
OR(
Propriedade_da_conta__c == &apos;PRIVADO&apos;,
Propriedade_da_conta__c == &apos;&apos;
)
),  Amount , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funil privado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>