force-app/main/default/objects/Opportunity/fields/Grupo_SKA__c.field-meta.xml
<CustomField>
    <fullName>Grupo_SKA__c</fullName>
    <formula>Account.Grupo_SKA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo SKA</label>
    <type>Text</type>
</CustomField>