force-app/main/default/objects/Opportunity/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Hospital)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>