force-app/main/default/objects/Opportunity/fields/ID_DMS__c.field-meta.xml
<CustomField>
    <fullName>ID_DMS__c</fullName>
    <label>ID DMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>