force-app/main/default/objects/Opportunity/fields/Id_do_propriet_rio__c.field-meta.xml
<CustomField>
    <fullName>Id_do_propriet_rio__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id do proprietário</label>
    <type>Text</type>
</CustomField>