force-app/main/default/objects/Opportunity/fields/Instrumentador_2__c.field-meta.xml
<CustomField>
    <fullName>Instrumentador_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instrumentador 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>