force-app/main/default/objects/Opportunity/fields/Instrumentador_3__c.field-meta.xml
<CustomField>
    <fullName>Instrumentador_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instrumentador 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades2</relationshipName>
    <type>Lookup</type>
</CustomField>