force-app/main/default/objects/Opportunity/fields/Instrumentador__c.field-meta.xml
<CustomField>
    <fullName>Instrumentador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instrumentador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>