force-app/main/default/objects/Opportunity/fields/Itens_a_Impugnar__c.field-meta.xml
<CustomField>
    <fullName>Itens_a_Impugnar__c</fullName>
    <label>Itens a impugnar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>