force-app/main/default/objects/Opportunity/fields/Itens_para_recurso__c.field-meta.xml
<CustomField>
    <fullName>Itens_para_recurso__c</fullName>
    <label>Itens para recurso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>