force-app/main/default/objects/Opportunity/fields/Lead_de_origem__c.field-meta.xml
<CustomField>
    <fullName>Lead_de_origem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead de origem</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>