force-app/main/default/objects/Opportunity/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <label>Local</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Modalidade__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APOIO COTAÇÕES</fullName>
            </value>
            <value>
                <fullName>BBM NET</fullName>
            </value>
            <value>
                <fullName>BEC</fullName>
            </value>
            <value>
                <fullName>BIONEXO</fullName>
            </value>
            <value>
                <fullName>BLL</fullName>
            </value>
            <value>
                <fullName>BNC</fullName>
            </value>
            <value>
                <fullName>CENTRAL DE COMPRAS - MS</fullName>
            </value>
            <value>
                <fullName>COMPRAS BR</fullName>
            </value>
            <value>
                <fullName>COMPRAS ELETRÔNICAS RS</fullName>
            </value>
            <value>
                <fullName>COMPRAS MANAUS</fullName>
            </value>
            <value>
                <fullName>COMPRAS MS</fullName>
            </value>
            <value>
                <fullName>COMPRASNETGO</fullName>
            </value>
            <value>
                <fullName>COMPRASNETGOV</fullName>
            </value>
            <value>
                <fullName>CONLICITAÇÃO</fullName>
            </value>
            <value>
                <fullName>E-COMPRAS AM</fullName>
            </value>
            <value>
                <fullName>EMAIL</fullName>
            </value>
            <value>
                <fullName>FUNDAÇÃO UNISELVA</fullName>
            </value>
            <value>
                <fullName>GOIASCOMPRAS</fullName>
            </value>
            <value>
                <fullName>HUMA</fullName>
            </value>
            <value>
                <fullName>IBAMA</fullName>
            </value>
            <value>
                <fullName>JUCEG</fullName>
            </value>
            <value>
                <fullName>LICITAÇÕES-E</fullName>
            </value>
            <value>
                <fullName>LICITANET</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
            <value>
                <fullName>PE INTEGRADO</fullName>
            </value>
            <value>
                <fullName>PLANEJAMENTO GT PLAN</fullName>
            </value>
            <value>
                <fullName>PORTAL DE AQUISIÇÕES MT</fullName>
            </value>
            <value>
                <fullName>PORTAL DE COMPRAS PUBLICAS</fullName>
            </value>
            <value>
                <fullName>PRESENCIAL</fullName>
            </value>
            <value>
                <fullName>PRO SAÚDE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>