force-app/main/default/objects/Opportunity/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <formula>Portal_da_licita_o__r.Login__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login</label>
    <type>Text</type>
</CustomField>