force-app/main/default/objects/Opportunity/fields/mesCriacao__c.field-meta.xml
<CustomField>
    <fullName>mesCriacao__c</fullName>
    <formula>MONTH(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mês de criação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>