force-app/main/default/objects/Opportunity/fields/Modalidade__c.field-meta.xml
<CustomField>
    <fullName>Modalidade__c</fullName>
    <label>Modalidade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADESÃO DE ATA SRP</fullName>
            </value>
            <value>
                <fullName>CARTA CONVITE</fullName>
            </value>
            <value>
                <fullName>CARTA COTAÇÃO</fullName>
            </value>
            <value>
                <fullName>CHAMAMENTO</fullName>
            </value>
            <value>
                <fullName>COTAÇÃO PREVIA</fullName>
            </value>
            <value>
                <fullName>DISPENSA DE LICITAÇÃO</fullName>
            </value>
            <value>
                <fullName>ESTIMATIVA DE LICITAÇÃO</fullName>
            </value>
            <value>
                <fullName>PREGÃO ELETRÔNICO</fullName>
            </value>
            <value>
                <fullName>PREGÃO PRESENCIAL</fullName>
            </value>
            <value>
                <fullName>SICONV</fullName>
            </value>
            <value>
                <fullName>TOMADA DE PREÇO</fullName>
            </value>
            <value>
                <fullName>CARONA ATA SRP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>