force-app/main/default/objects/Opportunity/fields/Motivo_da_Impugna_o__c.field-meta.xml
<CustomField>
    <fullName>Motivo_da_Impugna_o__c</fullName>
    <label>Motivo da impugnação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PREÇO INEXEQUÍVEL</fullName>
            </value>
            <value>
                <fullName>PRODUTO</fullName>
            </value>
            <value>
                <fullName>DOCUMENTAÇÃO EXIGIDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>