force-app/main/default/objects/Opportunity/fields/Motivo_da_Perda__c.field-meta.xml
<CustomField>
    <fullName>Motivo_da_Perda__c</fullName>
    <label>Motivo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Sub_Fase__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACOMPANHAMENTO</fullName>
            </value>
            <value>
                <fullName>CRÉDITO</fullName>
            </value>
            <value>
                <fullName>DECISÃO DO CLIENTE</fullName>
            </value>
            <value>
                <fullName>ERRO DE DOCUMENTAÇÃO</fullName>
            </value>
            <value>
                <fullName>ESPECIFICAÇÃO</fullName>
            </value>
            <value>
                <fullName>ESTOQUE</fullName>
            </value>
            <value>
                <fullName>FALTA DE ANÁLISE TÉCNICA</fullName>
            </value>
            <value>
                <fullName>FALTA DE DOCUMENTAÇÃO</fullName>
            </value>
            <value>
                <fullName>FALTA DE REPRESENTANTE</fullName>
            </value>
            <value>
                <fullName>NÃO AUTORIZADO</fullName>
            </value>
            <value>
                <fullName>PERDA DE PRAZO PARA CADASTRO</fullName>
            </value>
            <value>
                <fullName>PREÇO</fullName>
            </value>
            <value>
                <fullName>PREFERÊNCIA DE MARCA</fullName>
            </value>
            <value>
                <fullName>PRODUTO</fullName>
            </value>
            <value>
                <fullName>SERVIÇO</fullName>
            </value>
            <value>
                <fullName>TIME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>