force-app/main/default/objects/Opportunity/fields/Motivo_Recurso__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Recurso__c</fullName>
    <label>Motivo recurso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PREÇO INEXEQUÍVEL</fullName>
            </value>
            <value>
                <fullName>PRODUTO</fullName>
            </value>
            <value>
                <fullName>DOCUMENTAÇÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>