force-app/main/default/objects/Opportunity/fields/N_do_Prontuario__c.field-meta.xml
<CustomField>
    <fullName>N_do_Prontuario__c</fullName>
    <label>Nº do Prontuário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>