force-app/main/default/objects/Opportunity/fields/Necess_rio_Recurso__c.field-meta.xml
<CustomField>
    <fullName>Necess_rio_Recurso__c</fullName>
    <label>Necessário recurso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>